crates/nx-syntax/tests/fixtures/invalid/missing-parenthesis.nx
// Missing closing angle bracket in function definition
let <Calculate x:int =
  <span>{x * 2}</span>
